# xv_r_os

./: .env  .gitignore  .justfile  Cargo.toml  README.md  build.rs  deny.toml
.cargo/: config.toml
src/: main.rs
src/lds/: kernel.ld  user.ld
src/xv_r_kernel/: config.rs  lib.rs  loader.rs  logging.rs  mm.rs  panic.rs  printf.rs  proc.rs  sync.rs  syscall.rs  task.rs  test.rs  timer.rs  trap.rs  user.rs
src/xv_r_kernel/board/: qemu.rs
src/xv_r_kernel/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  page_table.rs
src/xv_r_kernel/proc/: context.rs  cpu.rs  pid.rs
src/xv_r_kernel/sync/: up.rs
src/xv_r_kernel/syscall/: fs.rs  process.rs  time.rs
src/xv_r_kernel/task/: context.rs  manager.rs  switch.rs
src/xv_r_kernel/trap/: context.rs  trap.S
src/xv_r_kernel/user/: user.S
user/: Cargo.toml  build.rs
user/.cargo/: config.toml
user/src/: console.rs  heap.rs  lang_items.rs  lib.rs  syscall.rs  test.rs
user/src/lds/: user.ld
xv_r_kernel_pub/: Cargo.toml
xv_r_kernel_pub/src/: lib.rs
