[package]
name = "xv_r_os"
version = "0.1.0"
edition = "2021"
[workspace]
members = ["user","xv_r_kernel_pub"]
[[bin]]
name = "xv_r_os"
path = "src/main.rs"

[lib]
name = "xv_r_kernel"
crate-type = ["staticlib","rlib"]
path = "./src/xv_r_kernel/lib.rs"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "2.6.0"
spin = { version = "0.9.8", default-features = false, features = ["portable_atomic", "spin_mutex"] }
# buddy_system_allocator ="0.11.0" 
# good_memory_allocator = "0.1.7"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
log = "0.4.22"
num_enum = {version = "0.7.3",default-features = false}
riscv = { version = "0.12.1", features = ["critical-section-single-hart"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
uart_16550 = "0.3.1"
xv_r_kernel_pub = { path = "xv_r_kernel_pub" }
elf = { version = "0.7.4", default-features = false }
# portable-atomic = { version = "1.9.0", default-features = false, features = ["critical-section", "require-cas"] }
# critical-section = "1.2.0"
# bootloader = "0.11.7"
# bootloader_api = "0.11.7"
