[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "user_lib"
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"
[dependencies]
linked_list_allocator = "0.10.5"
num_enum = {version = "0.7.3",default-features = false}
xv_r_kernel_pub = {path = "../xv_r_kernel_pub",default-features = false}
# xv_r_os = { path = "../" }

